--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -11,7 +11,7 @@
     .nav span { color: white; margin: 0 15px; cursor: pointer; }
     .hero { text-align: center; padding: 50px 20px; background: #eee; }
     .schedule-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 20px; }
-    .session { border: 1px solid #ddd; padding: 15px; border-radius: 8px; }
+    .session { position: relative; border: 1px solid #ddd; padding: 15px; border-radius: 8px; }
     .session-title { font-size: 1.2em; color: #0056b3; }
     .speaker-img { width: 100px; height: 100px; border-radius: 50%; object-fit: cover; float: left; margin-right: 15px;}
     /* Bouton avec mauvais contraste */
@@ -21,6 +21,28 @@
     .form-section input[type=email] { padding: 8px; width: 250px; margin-right: 10px; border: 1px solid #ccc; border-radius: 4px; }
     .form-section input[type=submit] { padding: 8px 15px; background: #0056b3; color: white; border: none; border-radius: 4px; cursor: pointer; }
     .clearfix::after { content: ""; clear: both; display: table; }
+    
+    .favorite-btn {
+      position: absolute;
+      top: 15px;
+      right: 15px;
+      cursor: pointer;
+      width: 24px;
+      height: 24px;
+    }
+    .favorite-btn svg {
+      fill: #ccc;
+      stroke: #888;
+      stroke-width: 1.5;
+      transition: fill 0.2s, transform 0.2s;
+    }
+    .favorite-btn:hover svg {
+      transform: scale(1.1);
+    }
+    .favorite-btn.favorited svg {
+      fill: #FFD700;
+      stroke: #B8860B;
+    }
   </style>
 </head>
 <body>
@@ -50,6 +72,9 @@
       
       <div class="schedule-grid">
         <div class="session clearfix">
+          <div class="favorite-btn" onclick="toggleFavorite(this)">
+            <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
+          </div>
           <!-- Image sans texte alternatif -->
           <img src="https://picsum.photos/100/100" data-ai-hint="personne portrait" class="speaker-img">
           <div class="session-title">L'approche "L'accessibilité d'abord"</div>
@@ -57,6 +82,9 @@
           <p>Découvrez pourquoi l'accessibilité n'est pas une réflexion après coup et comment créer des applications web inclusives dès le départ.</p>
         </div>
         <div class="session clearfix">
+           <div class="favorite-btn" onclick="toggleFavorite(this)">
+            <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
+          </div>
           <img src="https://picsum.photos/101/101" data-ai-hint="personne portrait" class="speaker-img">
           <div class="session-title">Les Server Components en action</div>
           <p>Intervenante : <i>Jane Smith</i></p>
@@ -76,6 +104,12 @@
   <div class="footer">
     <p>&copy; 2024 Conférence sur l'Avenir du Web. Tous droits réservés.</p>
   </div>
+
+  <script>
+    function toggleFavorite(button) {
+      button.classList.toggle('favorited');
+    }
+  </script>
 
 </body>
 </html>
