--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -3,34 +3,7 @@
 <html>
 <head>
   <title>Conférence sur l'Avenir du Web</title>
-  <style>
-    body { font-family: sans-serif; margin: 0; background-color: #f4f4f4; color: #333; }
-    .header { background-color: #272c3d; color: white; padding: 20px; text-align: center; }
-    .header h1 { margin: 0; font-size: 2.5em; }
-    .header p { margin: 5px 0 0; }
-    .nav { background-color: #333; overflow: hidden; }
-    .nav span { float: left; display: block; color: white; text-align: center; padding: 14px 16px; text-decoration: none; }
-    .nav span:hover { background-color: #ddd; color: black; }
-    .container { padding: 15px; }
-    .main-content { background-color: white; padding: 20px; border-radius: 5px; }
-    .hero { background-color: #6a5acd; color: white; padding: 30px; text-align: center; border-radius: 5px; margin-bottom: 20px; }
-    .hero h2 { margin-top: 0; }
-    .register-btn { background-color: #ff6347; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; display: inline-block; cursor: pointer; border: 0; font-size: 1em;}
-    h3 { border-bottom: 2px solid #6a5acd; padding-bottom: 5px; }
-    .schedule-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 15px; margin-top: 15px; }
-    .session { background: #f9f9f9; border: 1px solid #ddd; padding: 15px; border-radius: 4px; position: relative; }
-    .session-title { font-weight: bold; font-size: 1.1em; margin-bottom: 5px; }
-    .session p { margin: 5px 0; }
-    .speaker-img { float: left; margin-right: 15px; border-radius: 50%; }
-    .clearfix::after { content: ""; clear: both; display: table; }
-    .form-section { margin-top: 20px; padding: 15px; background: #eee; border-radius: 4px; }
-    .form-section input[type="email"] { width: calc(100% - 110px); padding: 8px; border: 1px solid #ccc; border-radius: 4px; }
-    .form-section input[type="submit"] { padding: 8px 15px; background-color: #5cb85c; color: white; border: none; border-radius: 4px; cursor: pointer; }
-    .footer { background-color: #333; color: white; text-align: center; padding: 10px; position: relative; bottom: 0; width: 100%; margin-top: 20px;}
-    .favorite-btn { position: absolute; top: 10px; right: 10px; cursor: pointer; }
-    .favorite-btn svg { width: 24px; height: 24px; fill: #ccc; stroke: #666; stroke-width: 1.5; }
-    .favorite-btn.favorited svg { fill: #ffdd00; stroke: #ffab00; }
-  </style>
+  <link rel="stylesheet" href="/initial-styles.css">
 </head>
 <body>
 
