--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -2,6 +2,7 @@
 <!-- Attribut lang manquant -->
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Conférence sur l'Avenir du Web</title>
   <link rel="stylesheet" href="/initial-styles.css">
 </head>
