Retire l'aria-label

--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -64,7 +64,7 @@
 
   <div class="sponsors">
     <h4>Sponsorisé par</h4>
-    <a href="https://zenika.com" target="_blank" rel="noopener noreferrer" aria-label="Zenika, sponsor de l'événement">
+    <a href="https://zenika.com" target="_blank" rel="noopener noreferrer">
       <svg class="zenika-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 261.2 68.3" xml:space="preserve"><path d="M101.4 68.3h19.2l-30.8-33.3 29.5-35H98.6L79 21.3 78.4 22v46.3zm-27.5-35L44.2 0H25l30.7 33.3L25 68.3h19.2l29.7-35zM0 68.3h19.2V0H0v68.3zM189.6 19.3h-11.2v29.7c0 2.2-1.8 4-4 4s-4-1.8-4-4V19.3h-11.2v29.7c0 8.4 6.8 15.2 15.2 15.2s15.2-6.8 15.2-15.2V19.3zm-41.5 49h19.2V0h-19.2v68.3zm83.1-40.4c-.2.1-.4.2-.6.3-2.1 1.2-4.9 1.9-8.4 1.9-12.2 0-22.1-9.9-22.1-22.1S210 0 222.2 0c11.8 0 21.5 9.3 22 21.1h-19.1c-.5-5.9-5.4-10.4-11.3-9.5-5.3.8-9.1 5.7-8.3 11s5.7 9.1 11 8.3c.5-.1.9-.2 1.4-.4l7.1-2.4-5.2-6.2h-7.8v-5.6h18.9l9.3 11.1-13.6 4.5z"></path></svg>
     </a>
   </div>
