Dans initial.html replace le formulaire de newsletter par un formulaire

--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -53,10 +53,14 @@
       </div>
       
       <div class="form-section">
-        <h4>Abonnez-vous à notre newsletter</h4>
-        <!-- Champs de saisie sans étiquettes -->
-        <input type="email" placeholder="Entrez votre email">
-        <input type="submit" value="S'abonner">
+        <h4>Inscrivez-vous à l'événement</h4>
+        <div>Nom</div>
+        <input type="text">
+        <div>Prénom</div>
+        <input type="text">
+        <div>Email</div>
+        <input type="email">
+        <input type="submit" value="S'inscrire">
       </div>
     </div>
   </div>
