Style du formulaire d'inscription

--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -54,11 +54,11 @@
       
       <div class="form-section">
         <h4>Inscrivez-vous à l'événement</h4>
-        <div>Nom</div>
+        <div class="form-label">Nom</div>
         <input type="text">
-        <div>Prénom</div>
+        <div class="form-label">Prénom</div>
         <input type="text">
-        <div>Email</div>
+        <div class="form-label">Email</div>
         <input type="email">
         <input type="submit" value="S'inscrire">
       </div>
