--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -2,14 +2,14 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conférence sur l'Avenir du Web</title>
+  <title>Conférence sur l'Accessibilité Web</title>
   <link rel="stylesheet" href="/initial-styles.css">
 </head>
 <body>
 
   <div class="header">
-    <h1>Conférence sur l'Avenir du Web</h1>
-    <p>Façonner la prochaine génération d'expériences web</p>
+    <h1>Conférence Web A11y</h1>
+    <p>Construire un Web inclusif pour tous</p>
   </div>
 
   <div class="nav">
@@ -22,8 +22,8 @@
   <div class="container">
     <div class="main-content">
       <div class="hero">
-        <h2>Rejoignez-nous dans le Cloud !</h2>
-        <p>Une conférence virtuelle de deux jours pour les développeurs, designers et leaders technologiques.</p>
+        <h2>L'Accessibilité : Plus qu'une obligation, une opportunité.</h2>
+        <p>Une conférence virtuelle pour apprendre à concevoir et développer des expériences numériques accessibles à tous.</p>
         <br>
         <div onclick="alert('La page d\'inscription n\'est pas encore implémentée !')" class="register-btn">Inscrivez-vous maintenant !</div>
       </div>
@@ -46,9 +46,9 @@
             <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
           </div>
           <img src="https://picsum.photos/101/101" data-ai-hint="personne portrait" class="speaker-img">
-          <div class="session-title">Les Server Components en action</div>
+          <div class="session-title">Navigation au clavier et lecteurs d'écran</div>
           <p>Intervenante : <i>Jane Smith</i></p>
-          <p>Une plongée en profondeur dans les React Server Components et comment ils changent le paysage du développement web.</p>
+          <p>Maîtrisez les techniques pour rendre vos applications entièrement utilisables sans souris et parfaitement interprétables par les lecteurs d'écran.</p>
         </div>
       </div>
       
@@ -73,7 +73,7 @@
   </div>
 
   <div class="footer">
-    <p>&copy; 2024 Conférence sur l'Avenir du Web. Tous droits réservés.</p>
+    <p>&copy; 2024 Conférence Web A11y. Tous droits réservés.</p>
   </div>
   
   <script>
