--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -56,12 +56,12 @@
         <div class="speaker-profile">
           <img src="https://picsum.photos/seed/patrice/150/150" data-ai-hint="personne portrait" class="speaker-img-large">
           <h4>Patrice de Saint Steban</h4>
-          <p>Expert en accessibilité numérique et développeur front-end passionné, Patrice partagera sa vision pour un web plus humain.</p>
+          <p>Expert en accessibilité numérique et développeur full stack passionné, Patrice partagera sa vision pour un web plus humain.</p>
         </div>
         <div class="speaker-profile">
           <img src="https://picsum.photos/seed/oceane/150/150" data-ai-hint="personne portrait" class="speaker-img-large">
           <h4>Océane Gillard</h4>
-          <p>Spécialiste des normes WCAG et designer UI/UX, Océane vous montrera comment allier esthétique et accessibilité.</p>
+          <p>Spécialiste des normes WCAG et développeuse Mobile et Front, Océane vous montrera comment allier esthétique et accessibilité.</p>
         </div>
       </div>
       
