Ajout Barbu en tant que sponsor

--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -80,9 +80,14 @@
 
   <div class="sponsors">
     <h4>Sponsorisé par</h4>
-    <a href="https://zenika.com" target="_blank" rel="noopener noreferrer">
-      <img src="/logo_zenika.svg" class="zenika-logo">
-    </a>
+    <div class="logo-list">
+      <a href="https://zenika.com" target="_blank" rel="noopener noreferrer">
+        <img src="/logo_zenika.svg" class="logo">
+      </a>
+      <a href="https://play.google.com/store/apps/details?id=zigotote.barbu_score" target="_blank" rel="noopener noreferrer">
+        <img src="/logo_barbu.png" class="logo" alt="Application Score Barbu">
+      </a>
+    </div>
   </div>
 
   <div class="footer">
