Lien vers inscription

--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -25,7 +25,7 @@
         <h2>L'Accessibilité : Plus qu'une obligation, une opportunité.</h2>
         <p>Une conférence virtuelle pour apprendre à concevoir et développer des expériences numériques accessibles à tous.</p>
         <br>
-        <div onclick="alert('La page d\'inscription n\'est pas encore implémentée !')" class="register-btn">Inscrivez-vous maintenant !</div>
+        <a href="#inscription" class="register-btn">Inscrivez-vous maintenant !</a>
       </div>
       
       <h3 id="programme"><b>Sessions à la une</b></h3>
