Image plus approprié

--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -65,7 +65,7 @@
           <div class="favorite-btn" onclick="toggleFavorite(this)">
             <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
           </div>
-          <img src="https://picsum.photos/100/100" data-ai-hint="personne portrait" class="speaker-img">
+          <img src="https://picsum.photos/id/48/100/100" data-ai-hint="personne portrait" class="speaker-img">
           <div class="session-title">L'approche "L'accessibilité d'abord"</div>
           <p>Intervenant : <i>Patrice de Saint Steban</i></p>
           <p>Découvrez pourquoi l'accessibilité n'est pas une réflexion après coup et comment créer des applications web inclusives dès le départ.</p>
@@ -74,7 +74,7 @@
            <div class="favorite-btn" onclick="toggleFavorite(this)">
             <svg viewBox="0 0 24 24"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
           </div>
-          <img src="https://picsum.photos/101/101" data-ai-hint="personne portrait" class="speaker-img">
+          <img src="https://picsum.photos/id/60/100/100" data-ai-hint="personne portrait" class="speaker-img">
           <div class="session-title">Navigation au clavier et lecteurs d'écran</div>
           <p>Intervenante : <i>Océane Gillard</i></p>
           <p>Maîtrisez les techniques pour rendre vos applications entièrement utilisables sans souris et parfaitement interprétables par les lecteurs d'écran.</p>
@@ -84,12 +84,12 @@
       <h3 id="intervenants"><b>Nos Intervenants</b></h3>
       <div class="speaker-grid">
         <div class="speaker-profile">
-          <img src="https://picsum.photos/seed/patrice/150/150" data-ai-hint="personne portrait" class="speaker-img-large">
+          <img src="https://picsum.photos/id/91/150/150" data-ai-hint="personne portrait" class="speaker-img-large">
           <h4>Patrice de Saint Steban</h4>
           <p>Expert en accessibilité numérique et développeur full stack passionné, Patrice partagera sa vision pour un web plus humain.</p>
         </div>
         <div class="speaker-profile">
-          <img src="https://picsum.photos/seed/oceane/150/150" data-ai-hint="personne portrait" class="speaker-img-large">
+          <img src="https://picsum.photos/id/65/150/150" data-ai-hint="personne portrait" class="speaker-img-large">
           <h4>Océane Gillard</h4>
           <p>Spécialiste des normes WCAG et développeuse Mobile et Front, Océane vous montrera comment allier esthétique et accessibilité.</p>
         </div>
