Remove some titles

--- a/src/lib/initial.html
+++ b/src/lib/initial.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="header">
-    <h1>Conférence Web A11y</h1>
+    <p class="title">Conférence Web A11y</p>
     <p>Construire un Web inclusif pour tous</p>
   </div>
 
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="main-content">
       <div class="hero">
-        <h2>L'Accessibilité : Plus qu'une obligation, une opportunité.</h2>
+        <p class="subtitle">L'Accessibilité : Plus qu'une obligation, une opportunité.</p>
         <p>Une conférence virtuelle pour apprendre à concevoir et développer des expériences numériques accessibles à tous.</p>
         <br>
         <a href="#inscription" class="register-btn">Inscrivez-vous maintenant !</a>
