Dans la page so'lution, ajouter une description pour le terme a11y pour

--- a/src/lib/solution.html
+++ b/src/lib/solution.html
@@ -9,7 +9,7 @@
 <body>
 
   <header class="header">
-    <h1>Conférence Web A11y</h1>
+    <h1>Conférence Web <abbr title="Accessibilité">A11y</abbr></h1>
     <p>Construire un Web inclusif pour tous</p>
   </header>
 
@@ -136,7 +136,7 @@
   </aside>
 
   <footer class="footer">
-    <p>&copy; 2024 Conférence Web A11y. Tous droits réservés.</p>
+    <p>&copy; 2024 Conférence Web <abbr title="Accessibilité">A11y</abbr>. Tous droits réservés.</p>
   </footer>
 
   <div id="snackbar" role="status" aria-live="polite">Votre inscription a bien été validée !</div>
