--- a/src/lib/solution.html
+++ b/src/lib/solution.html
@@ -35,7 +35,7 @@
             Lieu
             <span class="icon" aria-hidden="true">+</span>
           </button>
-          <div id="accordion-content-1" class="accordion-content">
+          <div id="accordion-content-1" class="accordion-content" hidden>
             <p>L'événement a lieu à l'agence nantaise de Zenika, idéalement située en centre ville.</p>
             <img src="/map.png" alt="Carte montrant l'emplacement de l'agence Zenika à Nantes.">
           </div>
@@ -45,7 +45,7 @@
             Date
             <span class="icon" aria-hidden="true">+</span>
           </button>
-          <div id="accordion-content-2" class="accordion-content">
+          <div id="accordion-content-2" class="accordion-content" hidden>
             <p>Le <strong>4 mai 2026</strong>, de 9h00 à 17h00.</p>
           </div>
         </div>
@@ -54,7 +54,7 @@
             Nombre de places
             <span class="icon" aria-hidden="true">+</span>
           </button>
-          <div id="accordion-content-3" class="accordion-content">
+          <div id="accordion-content-3" class="accordion-content" hidden>
             <p>Les places sont limitées à <strong>500 participants</strong> pour garantir une expérience interactive et de qualité.</p>
           </div>
         </div>
@@ -178,6 +178,7 @@
             const isExpanded = button.getAttribute('aria-expanded') === 'true';
             
             button.setAttribute('aria-expanded', !isExpanded);
+            content.hidden = isExpanded;
             
             if (!isExpanded) {
                 content.style.maxHeight = content.scrollHeight + 'px';
