Quand on a ce html :  <p>Le <strong>4 mai 2026</strong>, de 9h00 à 17h00

--- a/src/lib/solution.html
+++ b/src/lib/solution.html
@@ -46,7 +46,7 @@
             <span class="icon" aria-hidden="true">+</span>
           </button>
           <div id="accordion-content-2" class="accordion-content" hidden>
-            <p>Le <strong>4 mai 2026</strong>, de 9h00 à 17h00.</p>
+            <p>Le <span class="font-bold">4 mai 2026</span>, de 9h00 à 17h00.</p>
           </div>
         </div>
         <div class="accordion-item">
@@ -55,7 +55,7 @@
             <span class="icon" aria-hidden="true">+</span>
           </button>
           <div id="accordion-content-3" class="accordion-content" hidden>
-            <p>Les places sont limitées à <strong>500 participants</strong> pour garantir une expérience interactive et de qualité.</p>
+            <p>Les places sont limitées à <span class="font-bold">500 participants</span> pour garantir une expérience interactive et de qualité.</p>
           </div>
         </div>
       </section>
