Correction du style du bouton favory

--- a/src/lib/solution.html
+++ b/src/lib/solution.html
@@ -69,7 +69,7 @@
               <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
             </button>
             <img src="https://picsum.photos/id/48/100/100" alt="">
-            <div class="session-title"><h3>L'approche "L'accessibilité d'abord"</h3></div>
+            <h3>L'approche "L'accessibilité d'abord"</h3>
             <p>Intervenant : <i>Patrice de Saint Steban</i></p>
             <p>Découvrez pourquoi l'accessibilité n'est pas une réflexion après coup et comment créer des applications web inclusives dès le départ.</p>
           </article>
@@ -78,7 +78,7 @@
               <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>
             </button>
             <img src="https://picsum.photos/id/60/100/100" alt="">
-            <div class="session-title"><h3>Navigation au clavier et lecteurs d'écran</h3></div>
+            <h3>Navigation au clavier et lecteurs d'écran</h3>
             <p>Intervenante : <i>Océane Gillard</i></p>
             <p>Maîtrisez les techniques pour rendre vos applications entièrement utilisables sans souris et parfaitement interprétables par les lecteurs d'écran.</p>
           </article>
