Correction affichage formulaire

--- a/src/lib/solution.html
+++ b/src/lib/solution.html
@@ -108,17 +108,15 @@
               <label class="form-label">Nom
                 <input id="form-nom" type="text" autocomplete="family-name">
               </label>
-              <label class="form-label">Email
-                <input id="form-email" type="email" autocomplete="email">
+              <label class="form-label" for="form-prenom">Prénom
+                <input id="form-prenom" type="text" autocomplete="given-name">
               </label>
-              <div>
-                <label class="form-label" for="form-prenom">Prénom
-                  <input id="form-prenom" type="text" autocomplete="given-name">
-                  </label>
-              </div>
             </div>
+            <label class="form-label">Email
+              <input id="form-email" type="email" autocomplete="email">
+            </label>
             <div id="form-error" class="form-error" role="alert" aria-live="assertive"></div>
-            <input type="submit" value="S'inscrire" tabindex="4">
+            <input type="submit" value="S'inscrire">
         </form>
       </section>
     </div>
